fixed nav menu to work on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -456,7 +456,7 @@ img{
 /* Media qurey section */
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
-    .container {
+    .nav-container {
         margin: 0;
     }
 }
@@ -495,7 +495,7 @@ img{
     .nav div.main_list ul li a {
         text-align: center;
         width: 100%;
-        font-size: 3rem;
+        font-size: 2rem;
         padding: 20px;
     }
     .nav div.media_button {
